# ucg

./: .gitignore  CMakeLists.txt  Makefile  README.md  exec  make.sh
include/: contrast.hpp  hex.hpp  types.hpp
include/config/: alacritty.hpp  neovim.hpp
include/conversion/: hsb.hpp
include/diagnostics/: exception.hpp
include/toml/: parser.hpp
includes/: colorscheme.hpp  config.hpp  hex.hpp  testcolor.hpp
includes/config/: alacritty.hpp  neovim.hpp  vim.hpp
includes/conversion/: hsb.hpp  hsl.hpp  lch.hpp
includes/memory/: memory.hpp
sources/: colorscheme.cpp  main.cpp  testcolor.cpp
sources/config/: vim.cpp
sources/conversion/: hsb.cpp  hsl.cpp  lch.cpp
sources/toml/: parser.cpp
todo/: CMakeLists.txt  generate_gperf.sh  gp_hash.hpp  make_old.sh  ucg.toml
tools/: install_toml++.sh  install_yaml-cpp.sh
